openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Z10.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@interface An {
    int[][] a();
 }
